<!--
  ~ Nextcloud Maps Geofavorites for Android
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <!-- App strings -->
    <string name="app_name">Maps Geofavorites</string>
    <string name="welcome">Welcome to Nextcloud Maps Geofavorites</string>

    <!-- Login Activity -->
    <string name="choose_account">Choose account</string>

    <!-- Geofavorites list -->
    <string name="new_geobookmark">New geofavorite</string>
    <string name="about">About</string>
    <string name="switch_account">Switch account</string>
    <string name="list_mode">List</string>
    <string name="search_in_all">Search by name</string>
    <string name="share_via">Share via</string>
    <string name="share_message">{title}: {lat}°N, {lng}°E    https://www.openstreetmap.org/#map=17/{lat}/{lng}</string>
    <string name="share_message_default_title">Check out this place:</string>
    <string name="list_context_menu_share">Share</string>
    <string name="list_context_menu_delete">Delete</string>
    <string name="dialog_delete_title">Delete geofavorite</string>
    <string name="dialog_delete_message">You are about to delete geofavorite {name}. Proceed?</string>
    <string name="dialog_delete_delete">Delete</string>
    <string name="dialog_delete_cancel">Maintain</string>
    <string name="dialog_logout_title">Switch account</string>
    <string name="dialog_logout_message">Do you want to switch account?</string>
    <string name="list_geofavorite_deleted">Geofavorite deleted</string>
    <string name="list_geofavorite_connection_error">Unable to obtain geofavorites list</string>
    <string name="filtering_unavailable">Category filtering is unavailable at the moment</string>
    <string name="filtering_dialog_title">Filter by category</string>
    <string name="filtering_dialog_cancel">Show all</string>

    <!-- Sort dialog -->
    <string name="sort_by">Sort by</string>
    <string name="menu_item_sort_by_title_a_z">A - Z</string>
    <string name="menu_item_sort_by_date_newest_first">Newest first</string>
    <string name="menu_item_sort_by_category_a_z">Category</string>
    <string name="menu_item_sort_by_distance_nearest_first">Distance</string>

    <!-- Geofavorites detail -->
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="created">Created</string>
    <string name="modified">Modified</string>
    <string name="category">Category</string>
    <string name="coords">Coordinates</string>
    <string name="accuracy">Accuracy: {accuracy} m</string>
    <string name="accuracy_nosignal">No GPS signal!</string>
    <string name="location_permission_required">Location permission is required to create a geofavorite.</string>
    <string name="category_hint">Write the name to create a new category</string>
    <string name="error_saving_geofavorite">Unable to save geofavorite</string>
    <string name="error_unsupported_uri">Unable to obtain coordinates from shared data</string>
    <string name="geofavorite_saved">Geofavorite saved</string>
    <string name="incomplete_geofavorite">Incomplete geofavorite: Name and category are mandatory</string>
    <string name="coords_copied">Coordinates have been copied to the clipboard</string>

    <!-- Map picker activity -->
    <string name="coordinates_parse_error">Coordinates should be in format xx.xxxxxx</string>
    <string name="coordinates_invalid_error">Invalid coordinates</string>
    <string name="coordinates_north">°N</string>
    <string name="coordinates_east">°E</string>

    <!-- About -->
    <string name="about_version_title">Version</string>
    <string name="about_version">You are currently using &lt;strong>%1$s&lt;/strong></string>
    <string name="about_source_title">Source code</string>
    <string name="about_source">This project is hosted on GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
    <string name="about_issues_title">Issues</string>
    <string name="about_issues">You can report bugs, enhancement proposals and feature requests at the GitHub issue tracker: &lt;a href="%1$s">%1$s&lt;/a></string>
    <string name="about_maps_title">Maps</string>
    <string name="about_maps">This app uses Open Street Maps tiles and servers to display the map. I do not accept any donation for this app, but strongly encourage to make any donation to &lt;a href="%1$s">OpenStreetMap&lt;/a>, as this application could not exist without them.</string>
    <string name="about_app_license_title">App license</string>
    <string name="about_app_license">This application is licensed under the GNU GENERAL PUBLIC LICENSE v3+.</string>
    <string name="about_app_license_button">View license</string>

    <!-- Common strings -->
    <string name="common_yes">Yes</string>
    <string name="common_cancel">Cancel</string>

    <!-- URLs -->
    <string name="url_source" translatable="false">https://github.com/penguin86/nextcloud-maps-client</string>
    <string name="url_issues" translatable="false">https://github.com/penguin86/nextcloud-maps-client/issues</string>
    <string name="url_license" translatable="false">https://raw.githubusercontent.com/penguin86/nextcloud-maps-client/master/LICENSE</string>
    <string name="url_maps" translatable="false">https://donate.openstreetmap.org</string>

    <!-- Menu -->
    <string name="new_geobookmark_gps">New from current position</string>
    <string name="new_geobookmark_map">New from map</string>

    <!-- Accessibility (content descriptions) -->
    <string name="open_fab">Add geofavorite</string>
    <string name="add_from_gps">Add geofavorite at current GPS position</string>
    <string name="add_from_map">Add geofavorite from map</string>
    <string name="menu">Open menu</string>
</resources>
