<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Nextcloud Maps Geofavorites for Android
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="it.danieleverducci.nextcloudmaps.fragments.GeofavoriteListFragment"
        tools:layout="@layout/fragment_geofavorite_list" />


    <!-- Add from map FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_from_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:src="@drawable/ic_add_map"
        app:backgroundTint="@color/defaultBrand"
        app:fabSize="mini"
        app:tint="@color/white"
        tools:ignore="DuplicateClickableBoundsCheck"
        android:contentDescription="@string/add_from_map" />

    <!-- Add from current position FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_from_gps"
        android:layout_margin="24dp"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="mini"
        android:src="@drawable/ic_add_gps"
        app:backgroundTint="@color/defaultBrand"
        app:tint="@color/white"
        android:contentDescription="@string/add_from_gps"/>

    <!-- Main FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/open_fab"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/defaultBrand"
        app:tint="@color/white"
        android:contentDescription="@string/open_fab"/>

</FrameLayout>